--- a/.env_format
+++ b/.env_format
@@ -1,2 +1,3 @@
 SQLALCHEMY_DATABASE_URL = "mysql://devch1013:password@10.10.10.24:3306/refeat_main"
 ELASTICSEARCH_URL="http://10.10.10.27:9200"
+BACKEND_URL="http://192.168.0.124:8080"
